# Amazon-Chess-cpp

./: .gitignore  CMakeLists.txt  README
include/: AmazonBoard.h  AmazonEngine.h  GameLogic.h  mainwindow.h  search_engine.h  startscreen.h
src/: AmazonEngine.cpp  GameLogic.cpp  main.cpp  mainwindow.cpp  search_engine.cpp  startscreen.cpp
